# learn-french-gender

backend/: pyproject.toml  words.jsonl
backend/backend/: rest.py
frontend/: next.config.js  package.json
frontend/components/: CenterSpinner.tsx  ColorModeToggle.tsx  FrontFlashcard.tsx  Layout.tsx  Logo.tsx  NavBar.tsx  NextChakraImage.tsx  SignInSignOutButton.tsx
frontend/lib/: api.ts  darkmode.tsx  firebase.ts  navigation.ts  theme.ts
frontend/models/: flashcards.tsx
frontend/pages/: _app.tsx  game.tsx
